--- a/KRNL.WebMVC/Views/Document/Create.cshtml
+++ b/KRNL.WebMVC/Views/Document/Create.cshtml
@@ -36,7 +36,7 @@
                 </form>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10 createDocButton">
-                        <input type="submit" value="Create" class="btn btn-default createDocButton" />
+                        <input type="submit" value="Upload" class="btn btn-default createDocButton" />
                     </div>
                 </div>
             </div>
@@ -61,9 +61,9 @@
     </div>
 }
 
-@*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
