--- a/KRNL.WebMVC/Views/Location/Edit.cshtml
+++ b/KRNL.WebMVC/Views/Location/Edit.cshtml
@@ -27,7 +27,7 @@
         @if (Model.DocString != null)
         {
             <div class="toggleButton">
-                <a href=@Url.Content(Model.DocString)><input type="button" value="Field Map" class="searchButton mapButton" /></a>
+                <a href=@Url.Content(Model.DocString)><input type="button" value=" Field Map " class="searchButton mapButton" /></a>
             </div>
         }
 
@@ -104,17 +104,12 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div>
             @Html.HiddenFor(model => model.LocationId, new { id = "locId" })
+            @Html.HiddenFor(model => model.CooperatorId)
+            @Html.HiddenFor(model => model.IsStaked)
+            @Html.HiddenFor(model => model.IsHarvested)
+            @Html.HiddenFor(model => model.IsPlanted)
+            @Html.HiddenFor(model => model.IsRowbanded)
         </div>
-        @Html.HiddenFor(model => model.CooperatorId)
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.LocationId, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.LocationId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LocationId, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
 
         <div class="form-group">
             @Html.LabelFor(model => model.LocationName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -153,32 +148,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Longitude, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Longitude, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.IsStaked, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.IsStaked)
-                        @Html.ValidationMessageFor(model => model.IsStaked, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>*@
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.IsStaked, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10 enumDropDown">
-                    @Html.EnumDropDownListFor(model => model.IsStaked, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.IsStaked, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-        @Html.HiddenFor(model => model.IsStaked)
-        <div class="form-group">
-            @Html.LabelFor(model => model.IsHarvested, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10 enumDropDown">
-                @Html.EnumDropDownListFor(model => model.IsHarvested, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IsHarvested, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -311,19 +280,22 @@
                         @Html.DisplayFor(modelItem => item.DateCreated)
                     </td>
                     <td class="message ">
-                        <div class="messageLabel">Predicted:</div>
-                        @Html.DisplayFor(modelItem => item.PredictedGrowthStage)
-                    </td>
-                    <td class="message messageTopRight ">
-                        <div class="messageLabel">Actual:</div>
+                        <div class="messageLabel">Growth Stage:</div>
                         @Html.DisplayFor(model => item.HumanGrowthStage)
+                    </td>
+                    <td class="message messageTopRight alignRight">
+                        <a href="@Url.Action("Edit", "Message", new { id = item.MessageId})"><img class="editIcon" src="/img/iedit.png" alt="KRNL"></a>
+                        <a href="@Url.Action("Delete", "Message", new { id = item.MessageId})"><img class="editIcon" src="/img/idelete.png" alt="KRNL"></a>
                     </td>
                 </tr>
                 <tr class="messageBottom">
                     <td class="messageBottomLeft" colspan="2">
-                        <p class="comment">
-                            @Html.DisplayFor(modelItem => item.Comment)
-                        </p>
+                        @if (item.Comment != null)
+                        {
+                            <p class="comment">
+                                @Html.DisplayFor(modelItem => item.Comment)
+                            </p>
+                        }
                         @Html.DisplayFor(modelItem => item.FullName)
                         <br />
                         @switch (item.Rating)
